Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-119526

[Reg 6.6.0->6.6.1]QCocoaAccessibility Crash with Mac VoiceOver enabled

XMLWordPrintable

    • macOS
    • ecef70462 (dev), 7e28513c2 (6.6), 4d873c8e6 (tqtc/lts-6.5), 7120859fd (dev), 8b9b3b500 (tqtc/lts-6.5.4), 6d4c847c3 (6.7), f6db4f980 (6.6), 9b4f847a0 (tqtc/lts-6.5)

      This is a highly  serious issue.
      Basically QAccessible is broken. Applications with Qt. 6.5. or 6.6 crash on macOS when using listbox, combox, tableWiew, and similar.
      If VoiceOver is not activated the crash happen randomly. But on Mac Sonoma the problem has worsen and and applications crash frequently.
      Luckily with the VoiceOver enabled the application always crash immediately. So it is now probably easy to spot and correct the problem (assuming there are not multiples issues).
      I suggest to fix the problem immediately and come out with a new release  6.6.2 and 6.5.4.

      Following you find information on the discovery and problems.

      I suspect the issue is related to https://bugreports.qt.io/browse/QTBUG-119179 (ComboBox Accessibility Issues on Various Platforms)

      Kindly let us know when you have a fix, so we can tests it with our application and see if the crashes happening in different places are still present.

      Original post

      QT Widget applications crash on MacOS with combobox, listbox when Voice Over is enabled.

      You can replicate the problem using the example Project Standard Dialog .
      On Mac iOS Sonoma Enable VoiceOver in System Settings > Accessibility > Voice Over
      Click on the QInputDialog::getItem() the program crash.
      With Qt. 6.6.0 there are no problems.

      Crash happen in qcocoaaccessibilityelement.mm see following image

       

      The same problem arrives also with combobox elements.

      The same problem arrives on different computers. So I imagine you can easily replicate the problem.
      If it is not the case and you need more information let me know.

        1. image-2023-11-28-12-08-51-429.png
          89 kB
          Domenico Zucchetti
        2. image-2023-11-28-12-09-57-690.png
          475 kB
          Domenico Zucchetti
        3. image-2023-12-01-07-44-51-083.png
          155 kB
          Domenico Zucchetti
        4. image-2023-12-22-15-46-16-445.png
          226 kB
          Domenico Zucchetti
        5. image-2023-12-22-15-46-48-138.png
          328 kB
          Domenico Zucchetti
        6. image-2023-12-22-15-47-13-234.png
          290 kB
          Domenico Zucchetti
        7. image-2023-12-22-15-47-43-459.png
          333 kB
          Domenico Zucchetti
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vhilshei Volker Hilsheimer
            domezuk Domenico Zucchetti
            Votes:
            1 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: